// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mute Button Component  Displays a Mute Button When Unmuted 1`] = `
<button
  id="mute-button"
  onClick={undefined}
>
  Mute
</button>
`;

exports[`Mute Button Component  Displays an Unmute Button When Muted 1`] = `
<button
  id="unmute-button"
  onClick={undefined}
>
  Unmute
</button>
`;
